Changes in stable release 2.4.7 (not released yet)

* Fixed parsing of WindowList with conditions and a position at
  the same time that was broken in 2.4.6.

* Fixed some problems with the DeskOnly option of FvwmTaskBar
  (windows were duplicated when moving to a different Desk; the
  StickyIcon style was ignored).

* Fixed config.h warnings with some compilers introduced in 2.4.6.

Changes in stable release 2.4.6 (10-Mar-2002)

* Better support of non ISO-8859-1 window and icon titles. See the
  --disable-compound-text option in INSTALL.fvwm for more details.

* Improved speed of opaque window movement/resizing.

* Fixed a bug that caused windows not being raised and lowered
  properly.

* Suppress error message when using XBM icons.

* Fixed a read descriptor problem in FvwmTaskBar

* Fixed a minor colour update bug in the pager.

* Fixed an fvwm crash when a module died at the wrong moment;
  specifically a transient FvwmPager of FvwmIconMan.

* Fixed placement of WindowList on wrong Xinerama screen when
  called without any options on a screen other than the primary
  screen.

* Fixed a problem with root bindings and xfishtank.

* Fixed moving windows with the keyboard over the edge of the
  screen when the pointer remained of the previous page.

* Do not hilight windows after ResizeMove.

* New conditional command ThisWindow.

* Some fixes in the configure script that caused some rare
  problems detecting gnome and ncurses.

* Fixed a memory leak in the Pick command.

* Allow to choose windows with CirculateSkip with the Pick command.

* Fixed an FvwmScript compile problem on dec-osf5.

* The window handles are now resizes as they should when the
  HandleWidth style changes.

* The Current command does not select a random window when no
  window has the focus.

* Fixed a rare menu placement problem with Xinerama.

Changes in stable release 2.4.5 (27-Jan-2002)

* Fixed minor problems in popping sub menus up and down.
